# HMM-Stock-Forecast

./: LICENSE  README.md  pyproject.toml  setup.py
doc/: assignment.tex  bib.tex  conclusion.tex  doc.tex  doc_olds.tex  guide.tex  hmm.tex  implementation.tex  intro.tex  prediction.tex  results.tex  tools.tex
hmm-stock-forecast/: main.py
hmm_stock_forecast/: __init__.py  app.py  base2.pyx  forecast.py  main.py
hmm_stock_forecast/data/: data.py
hmm_stock_forecast/error/: error.py
hmm_stock_forecast/hmm/: criteria.py  hmm.py  ihmm.py  model.py  utils.py
hmm_stock_forecast/plot/: plot.py
hmm_stock_forecast/pomegranate/: __init__.py  base.c  base.pxd  base.pyx  distribution.py  hmm.c  hmm.pyx  io.py  kmeans.c  kmeans.pyx  parallel.c  parallel.pyx  state.py  utils.c  utils.pxd  utils.pyx
hmm_stock_forecast/pomegranate/distributions/: NormalDistribution.c  NormalDistribution.pxd  NormalDistribution.pyx  __init__.py  distributions.c  distributions.pxd  distributions.pyx
hmm_stock_forecast/pyhhmm/: base.py  gaussian.py  hmm.py  utils.py
hmm_stock_forecast/utils/: args.py  logging.py
