[tool.poetry]
name = "hmm_stock_forecast"
version = "1.0"
description = "Stock forecasting based on (gaussian) Hidden Markov Model"
authors = ["Martin Forejt"]
license = "MIT"

packages = [
    { include = "hmm_stock_forecast" },
    { include = "hmm_stock_forecast/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
recordclass = "^0.17.1"
argparse = "^1.4.0"
pandas-datareader = "^0.10.0"
pandas = "^1.3.5"
sklearn = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "hmm_stock_forecast.main:main"
